--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ members = [
     "argtool",
     "minigrep",
 ]
+
+[profile.release]
+debug = 1
+
+[profile.profiling]
+inherits = "release"
+debug = true
+
+[rust]
+debuginfo-level = 1
