--- a/minigrep/Cargo.toml
+++ b/minigrep/Cargo.toml
@@ -14,3 +14,14 @@ regex = "1"
 thiserror = "1.0.40"
 glob = "0.3.1"
 crossbeam = "0.8.2"
+
+
+[profile.release]
+debug = 1
+
+[profile.profiling]
+inherits = "release"
+debug = true
+
+[rust]
+debuginfo-level = 1
